--- a/python/README
+++ b/python/README
@@ -1,3 +1,5 @@
 AIRi is a twisted base Bluetooth service + web server that allows to configure,
 control and watch AIRcable's AIRi cameras, and AIRcable's OptiEyes cameras as 
 well.
+
+Version: 1.0.c5
